<resources>
    <string name="app_name">CoronaInfo</string>
    <string name="coronainfo_logo">CoronaInfo Logo</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_text_about">About</string>
    <string name="content_text_back">Back</string>
    <string name="about_project">This is an app made for the final project of CS50 - Introduction to Computer Science course. The purpose of CoronaInfo app is to show current status of COVID-19 virus infection around the world. It also shows news associated with corona virus published in various popular newspaper.</string>
    <string name="about_contact">Hello, I\'m Amrito Das Tipu, the sole developer of this app. For anyone interested to view the source code or help me in this project, please visit me in GitHub at https://github.com/amritoo/corona-info. If you\'ve any issues or problem with this app, please open a new issue describing it in GitHub.</string>
    <string name="title_text_settings">Settings</string>
    <string name="text_theme">Theme:</string>
    <string name="switch_text_light">Light</string>
    <string name="text_home_country">Home Country:</string>
    <string name="switch_text_dark">Dark</string>
    <string name="title_text_news">News</string>
    <string name="content_text_image">Image</string>
    <string name="button_text_open_browser">Open in browser</string>
    <string name="text_description">Description</string>
    <string name="text_date">Date</string>
    <string name="text_published_at">Published at:</string>
    <string name="text_title">Title</string>
    <string name="text_country">Country</string>
    <string name="text_unknown">Unknown</string>
    <string name="text_global">Global</string>
    <string name="title_text_help">Help</string>
    <string name="title_text_country_states">Country States</string>
</resources>